test/negative/feature_superfieldaccess/B.java
public class B extends A {
  public B() {}
  public int m() { return super.f; }
}
